# libOttoHardware

./: CMakeLists.txt  Makefile
include/otto/: otto.hpp  system.hpp
include/otto/devices/: camera.hpp  disk.hpp  fancyScreen.hpp  power.hpp  wifi.hpp
include/otto/io/: buttons.hpp  buzzer.hpp  pwm.hpp  rotary.hpp
include/stak/: stak.hpp  system.hpp
include/stak/devices/: fancyScreen.hpp  power.hpp
include/stak/io/: buttons.hpp  pwm.hpp  rotary.hpp
src/: otto.cpp  stak.cpp  system.cpp
src/devices/: disk.cpp  fancyScreen.cpp  power.cpp  wifi.cpp
src/io/: buttons.cpp  buzzer.cpp  pwm.cpp  rotary.cpp
tests/: a.out  test  test.cpp
tools/: otto-poweroff.cpp
